remove animations to fix layout shift on trade mobile

--- a/src/components/Global/FooterNav/FooterNav.module.css
+++ b/src/components/Global/FooterNav/FooterNav.module.css
@@ -13,7 +13,7 @@
     box-shadow: 0px 5px 40px rgba(0, 0, 0, 0.8);
    
     height: 56px;
-    z-index:0;
+    z-index:999;
     width: 98%;
     margin: 0 auto;
     border-top: 1px solid var(--dark3);
